--- a/package.json
+++ b/package.json
@@ -12,8 +12,24 @@
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "favicon": "0.0.2",
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
+    "pg": "^6.1.2",
+    "pg-promise": "^5.5.0",
     "serve-favicon": "~2.3.0"
-  }
+  },
+  "description": "# To Do List ## Description",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/morelme/to-do.git"
+  },
+  "author": "Melissa, Greg",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/morelme/to-do/issues"
+  },
+  "homepage": "https://github.com/morelme/to-do#readme"
 }
